# cotton-erp-rnrl

./: .env.example  .gitignore  15_YEAR_ARCHITECTURE_COMPLETE.md  ADMIN_MONITORING_IMPLEMENTATION.md  AD_HOC_LOCATION_IMPLEMENTATION.md  AI_CRYSTAL_CLEAR_PLAN.md  AI_IMPLEMENTATION_PLAN.md  AI_IMPLEMENTATION_PLAN_FINAL.md  AI_INTEGRATION_COMPLETE.md  AI_INTEGRATION_SUMMARY.md  AI_ML_CRITICAL_GAPS_REPORT.md  AI_MODULE_COMPLETION_STATUS.md  AI_ORCHESTRATION_BOUNDARIES_AUDIT.md  AI_POWERED_TRADE_DESK_BLUEPRINT.md  ARCHITECTURE_15YR_COMPLETE.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_COMPLIANCE_AUDIT.md  ARCHITECTURE_RECOVERY_PLAN.md  ARCHITECTURE_TRANSFORMATION_ROADMAP.md  AUTHENTICATED_WORKFLOW_TEST_REPORT.md  AVAILABILITY_ENGINE_ACTUAL_STATUS.md  AVAILABILITY_ENGINE_CHANGES.md  AVAILABILITY_ENGINE_COMPLETE.md  AVAILABILITY_ENGINE_COMPLETE_IMPLEMENTATION.md  AVAILABILITY_ENGINE_COMPLETE_STATUS.md  AVAILABILITY_ENGINE_FIXES.md  AVAILABILITY_ENGINE_IMPLEMENTATION.md  AVAILABILITY_ENGINE_SYSTEM_REVIEW.md  BRAND_ASTRO_NUMEROLOGY_ANALYSIS.md  CAPABILITIES_USER_GUIDE.md  CAPABILITY_BASED_STATUS.md  CAPABILITY_IMPLEMENTATION_COMPLETE.md  CDPS_END_TO_END_BUSINESS_FLOW.md  CDPS_IMPLEMENTATION_COMPLETE.md  CLEANUP_ANALYSIS.md  CLEANUP_VERIFICATION_REPORT.md  CLEAN_ARCHITECTURE_REFACTORING_PLAN.md  CODEQL_SECURITY_AUDIT_REPORT.md  CODE_AUDIT_FINDINGS.md  COMMODITY_MASTER_COMPLETE_DOCUMENTATION.md  (+134 more)
backend/: .gitignore  AVAILABILITY_ENGINE_TEST_REPORT.txt  MANUAL_TEST.md  TRADE_ENGINE_TEST_REPORT.md  __init__.py  conftest.py  create_admin_user.py  pyproject.toml  requirements-dev.txt  (+14 more)
(+444 files in other folders)
